# qr-code

./: .gitignore  CMakeLists.txt  main.cpp
zbar/: CMakeLists.txt  config.c  config.h  convert.c  decoder.c  decoder.h  error.c  error.h  image.c  image.h  img_scanner.c  mutex.h  processor.c  processor.h  refcnt.h  scanner.c  svg.h  symbol.c  symbol.h  thread.h  timer.h  window.h  zbar.h
zbar/decoder/: codabar.c  codabar.h  code39.c  databar.c  databar.h  ean.c  i25.c
