
FILE(GLOB SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
FILE(GLOB SRC_FILES_DEC ${CMAKE_CURRENT_SOURCE_DIR}/decoder/*.c)
FILE(GLOB SRC_FILES_QR ${CMAKE_CURRENT_SOURCE_DIR}/qrcode/*.c)

LIST(REMOVE_ITEM SRC_FILES_DEC "${CMAKE_CURRENT_SOURCE_DIR}/decoder/pdf417.c")

if(DEBUG_SVG)

else(DEBUG_SVG)
    LIST(REMOVE_ITEM SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/svg.c")
endif(DEBUG_SVG)

LIST(REMOVE_ITEM SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/jpeg.c")

include_directories("${CMAKE_CURRENT_SOURCE_DIR}")
add_library(zbar ${SRC_FILES} ${SRC_FILES_DEC} ${SRC_FILES_QR})